--- a/app/components/settings/settings.html
+++ b/app/components/settings/settings.html
@@ -49,9 +49,9 @@
     <h2>Raw Information</h2>
     <table class="table table-striped table-hover" >
          <tbody>
-            <tr ng-repeat="item in info">
-                <td>{{$index}}:</td>
-                <td>{{item}}</td>
+            <tr ng-repeat="(k,v) in info">
+                <td>{{k}}:</td>
+                <td>{{v}}</td>
             </tr>
         </tbody>
     </table>    
